--- a/src/index.css
+++ b/src/index.css
@@ -126,10 +126,11 @@ html, body {
 }
 
 body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  min-height: 100vh;
+  min-height: 100dvh;
   width: 100%;
+  background-color: #111111;
+}
+
+Label {
+  color: white;
 }
